完成获取凭据的调试

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <version>2.4</version>
             <classifier>jdk15</classifier>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
