--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>com.surenpi.ci</groupId>
     <artifactId>jenkins.client.java</artifactId>
-    <version>1.0.0-20171218</version>
+    <version>1.0.1-20180202-SNAPSHOT</version>
 
     <name>JenkinsJavaClient</name>
     <url>https://github.com/suren-jenkins/jenkins-client-java</url>
@@ -184,7 +184,7 @@
         <connection>scm:git:https://github.com/suren-jenkins/jenkins-client-java.git</connection>
         <url>scm:git:https://github.com/suren-jenkins/jenkins-client-java</url>
         <developerConnection>scm:git:https://github.com/suren-jenkins/jenkins-client-java.git</developerConnection>
-        <tag>v1.0.0-20171218</tag>
+        <tag>${project.version}</tag>
     </scm>
 
     <developers>
